updated javascript added functions for player score, randomized score, wins and losses

--- a/index.html
+++ b/index.html
@@ -34,21 +34,22 @@
             
         </div>
         <!--values and scores/columns and divs from bootstrap-->
+        <!--gameScore, winScore, lossScore, playerScore targets and id's for CSS and javascript/jquery-->
         <div class="row third">
                 <div class="col-md-2"></div>
-                <div class="col-md-3" id="gameScore"><h2>Score to Match:</h2></div>
+                <div class="col-md-3" id="gameScore"></div>
                 <div class="col-md-2"></div>
                 <div class="col-md-3">
                   <div class="row" id="winScore">
-                      <div class="col-md-4"><h2>Wins:</h2></div>
+                      <div class="col-md-4"></div>
                   </div>
                   <div class="row" id="lossScore">
-                      <div class="col-md-4"><h2>Losses:</h2></div>
+                      <div class="col-md-4"></div>
                   </div>
                   <div class="col-md-2"></div>
                 </div>
               </div>
-              <!--div columns/container for images-->
+              <!--div columns/container for buttons and images-->
                 <div class="row crystals">
                     <div class="col-md-12">
                       <div class="row">
@@ -70,7 +71,7 @@
             <!--bottom colum/div for player score-->
                   <div class="row fifth">
                     <div class="col-md-4"></div>
-                    <div class="col-md-3" id="playerScore">Player Score:</div>
+                    <div class="col-md-3" id="playerScore"></div>
                     <div class="col-md-4"></div>
                   </div>
             
